Tratando de centrar la seguridad en api gateway, sale mal